--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,24 +1,55 @@
-.slideshow-container{
-    height: 100vh;
-    width: 100vw;
-    max-width: 100%;
-    overflow: hidden;
+.slideshow-container {
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+  overflow: hidden;
 }
 
-.img-slideshow{
-    height: 100vh;
-    width: 100vw;
-    object-fit: cover;
-    max-width: 100%;
-    animation: zoomIn 8s ease;
+.img-slideshow {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  max-width: 100%;
+  animation: zoomIn 8s ease;
 }
 
-@keyframes zoomIn{
-from{
-transform: scale(1);
-}
-to{
-transform: scale(1.2);
+@keyframes zoomIn {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.2);
+  }
 }
 
+.slideshow-overlay {
+  background-color: rgba($color: #000000, $alpha: 0.6);
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+
+  p {
+    max-width: 800px;
+    margin-left: 120px;
+    padding-left: 32px;
+    color: white;
+    font-size: 60px;
+    border-left: 8px solid rgb(236, 54, 34);
+  }
+}
+
+.fadeIn{
+    animation: fadeInAnimation 1s ease-in-out;
+}
+
+@keyframes fadeInAnimation {
+    from{
+        opacity: 0;
+        transform: translateY(40px)
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px)
+    }
 }
