--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,12 @@
-<header>
-    <img src="assets/img/dla-logo-white.png" alt="">
-    <div>
-    <a href="#">Home</a>
+<header [class.headerDark]="darkMode">
+
+    <img *ngIf="!darkMode" routerLink="/" src="assets/img/dla-logo-white.png" alt="">
+    <img *ngIf="darkMode" routerLink="/" src="assets/img/dla-logo-black.png" alt="">
+    
+    <div [class.darkLinks]="darkMode">
+    <a routerLink="/">Home</a>
     <a href="#">Curriculum</a>
-    <a href="#">Projekte</a>
-    <a href="#">Impressum</a>
+    <a href="#">Projects</a>
+    <a routerLink="/imprint">Imprint</a>
 </div>
 </header>
