--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,27 +1,41 @@
-header{
-    position: absolute;
-    height: 80px;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 120px;
-    padding-right: 120px;
+header {
+  position: absolute;
+  height: 80px;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  padding-left: 120px;
+  padding-right: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    img{
-        height: 50px;
+  a {
+    color: white;
+    text-decoration: none;
+    margin-left: 32px;
+
+    &:hover {
+      color: rgba(255, 255, 255, 0.7);
     }
+  }
 
-    a{
-        text-decoration: none;
-        color: white;
-        margin-left: 32px;
+  img {
+    height: 50px;
+  }
+}
 
-        &:hover{
-            color: rgba($color: white, $alpha: 0.7);
-        }
+.darkLinks {
+  a {
+    color: black;
 
+    &:hover {
+      color: rgba(0, 0, 0, 0.8);
     }
+  }
+}
+
+.headerDark {
+  background-color: white;
+  box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
