--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -3,6 +3,7 @@ header {
   height: 80px;
   left: 0;
   right: 0;
+  top: 0;
   z-index: 1;
   padding-left: 120px;
   padding-right: 120px;
@@ -22,6 +23,7 @@ header {
 
   img {
     height: 50px;
+    cursor: pointer;
   }
 }
 
