updated images link angular style

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <header [class.headerDark]="darkMode">
 
-    <img *ngIf="!darkMode" routerLink="/" src="assets/img/dla-logo-white.png" alt="">
-    <img *ngIf="darkMode" routerLink="/" src="assets/img/dla-logo-black.png" alt="">
+    <img *ngIf="!darkMode" routerLink="/" src="./../../assets/img/dla-logo-white.png" alt="">
+    <img *ngIf="darkMode" routerLink="/" src="./../../assets/img/dla-logo-black.png" alt="">
     
     <div [class.darkLinks]="darkMode">
     <a routerLink="/">Home</a>
