--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,7 @@
-<h1>Impressum</h1>
+<h1 translate>Imprint</h1>
 
-<h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+<h2 translate>Information according to &sect; 5 TMG</h2>
+<h2 translate>Information according</h2>
 <p>Das Lizenz Atelier GmbH &amp; Co. KG<br />
 M&uuml;hlenbergstra&szlig;e 6<br />
 28876 Oyten</p>
