--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -41,3 +41,11 @@ header {
   background-color: white;
   box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
+
+.langlink {
+ cursor: pointer;
+ text-decoration: none;
+ :hover {
+   text-decoration: underline;
+ }
+}
