--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 body{
     margin: 0;
-    font-family: 'Libre Baskerville', serif;
+    // font-family: 'Libre Baskerville', serif;
+    font-family: 'Haboro-Book';
 }
